--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             height: 100vh;
             background-color: #f0f2f5;
             margin: 0;
-            overflow: hidden; /* Ẩn thanh cuộn nếu nút "No" bay ra xa */
+            overflow: auto; /* Ẩn thanh cuộn nếu nút "No" bay ra xa */
         }
 
         /* Style chung cho cả 2 hộp nội dung */
         .container {
             text-align: center;
             background-color: white;
-            padding: 40px 50px;
+            padding: 40px 25px;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
