--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 <body>
 
     <div id="intro-container" class="container">
-    <p> Yến Trang à, <br> 
+    <p> Anh yêu em <br> 
+        Yến Trang à,
         Anh có điều này muốn nói với em từ lâu rồi. Anh thật sự, thật sự xin lỗi em vì những lời anh đã nói hôm đó.
         Anh đã phân vân mãi, không biết liệu em có đọc hết những dòng này không. Nhưng có lẽ đây là cách duy nhất để em có thể đọc được, vì tin nhắn anh gửi em đều không hồi âm.
         Em biết không, từ trước đến giờ, mỗi khi có chuyện giữa cả hai, em đều gửi cho anh những dòng tin nhắn rất dài, chia sẻ với anh rất nhiều. Nhưng lần này, em lại im lặng. Sự im lặng của em thật nặng nề, nó làm anh có cảm giác như tim mình muốn nổ tung lên vậy.
@@ -175,5 +176,6 @@
 </body>
 
 </html>
+
 
 
