--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f0f2f5;
             margin: 0;
             overflow: auto; /* Ẩn thanh cuộn nếu nút "No" bay ra xa */
@@ -176,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
