--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
         Em biết không, từ trước đến giờ, mỗi khi có chuyện giữa cả hai, em đều gửi cho anh những dòng tin nhắn rất dài, chia sẻ với anh rất nhiều. Nhưng lần này, em lại im lặng. Sự im lặng của em thật nặng nề, nó làm anh có cảm giác như tim mình muốn nổ tung lên vậy.
         Mấy hôm nay anh thiếu thiếu vắng lắm, cảm giác như không có em đường đi làm về nó nhạt nhẽo.
         Thế ròi hôm nay, em gọi anh để chở con ci đi dạo, mặc dù không nói chuyện nhưng khi được gặp em anh đã vui lắmm, thật sự là vui lắm ý. Nên nếu em hỏi anh có hối hận không thì câu trả lời chắc chắn là có, hối hận vì hôm đó đang lẽ phải ôm em chứ không phải lớn tiếng rồi quay xe về .
-        Em biết anh mà, anh không giỏi văn nên chỉ viết được nhiêu đây thui, nên ấn tiếp tục để đọc tiếp nhen</p>
+        Em biết anh mà, anh không giỏi văn nên chỉ viết được nhiêu đây thui, nên ấn tiếp tục để đọc tiếp nhe </p>
         <button id="continue-btn">Tiếp tục</button>
         
     </div>
 
     <div id="question-container" class="container" style="display: none;">
-        <h2>Tha lỗi cho anh nhé, anh biết lỗi rồi, quay lại với anh với ci với lu đi..</h2>
+        <h2>Tha lỗi cho anh nhé, anh biết lỗi rồi, quay lại với anh với ci với lu đi..anh nhớ em lắm huhu.</h2>
         
         <div class="buttons">
-            <button id="yes-btn">Dạ</button>
+            <button id="yes-btn">Dạ, em cũng nhớ anh </button>
             <button id="no-btn">Hong</button>
         </div>
     </div>
@@ -175,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
